added vars, layout with css grid done.

--- a/index.html
+++ b/index.html
@@ -1,34 +1,48 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Impekable</title>
-        <meta name="description" content="This is my HTML5 boilerplate.">
 
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/screen.css">
-    </head>
-    <body>
-        <h1>
-            IMPEKABLE
-        </h1>
-        <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Dashboard</a></li>
-                <li><a href="#">Inbox</a></li>
-                <li><a href="#">Products</a></li>
-                <li><a href="#">Invoices</a></li>
-                <li><a href="#">Customers</a></li>
-                <li><a href="#">Chat Room</a></li>
-                <li><a href="#">Calendar</a></li>
-                <li><a href="#">Help Center</a></li>
-                <li><a href="#">Settings</a></li>
-            </ul>
-        </nav>
-        <h2>
-            Overview
-        </h2>
-    </body>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <title>Impekable</title>
+    <meta name="description" content="This is my HTML5 boilerplate.">
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/screen.css">
+</head>
+
+<body>
+
+    <div class="c-app">
+        <div class="c-app__logo">
+            <h1>
+                IMPEKABLE
+            </h1>
+        </div>
+        <div class="c-app__topbar"></div>
+        <div class="c-app__sidebar">
+            <nav>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Dashboard</a></li>
+                    <li><a href="#">Inbox</a></li>
+                    <li><a href="#">Products</a></li>
+                    <li><a href="#">Invoices</a></li>
+                    <li><a href="#">Customers</a></li>
+                    <li><a href="#">Chat Room</a></li>
+                    <li><a href="#">Calendar</a></li>
+                    <li><a href="#">Help Center</a></li>
+                    <li><a href="#">Settings</a></li>
+                </ul>
+            </nav>
+        </div>
+        <div class="c-app__main"></div>
+    </div>
+
+
+    <h2>
+        Overview
+    </h2>
+</body>
+
 </html>
